# jcode

./: .gitignore  CONTRIBUTING.md  Cargo.toml  OAUTH.md  README.md  RELEASING.md  TELEMETRY.md  build.rs  codemagic.yaml  terminal-capabilities.md
.github/scripts/: verify_windows_install.ps1
.github/workflows/: ci.yml  ios-testflight.yml  release.yml  windows-smoke.yml
crates/jcode-core/: Cargo.toml
crates/jcode-desktop/: Cargo.toml
crates/jcode-mobile-sim/: Cargo.toml
crates/jcode-mobile-sim/src/: gpu_preview.rs  lib.rs  main.rs
crates/jcode-notify-email/: Cargo.toml
crates/jcode-overnight-core/: Cargo.toml
crates/jcode-protocol/: Cargo.toml
crates/jcode-provider-core/: Cargo.toml
crates/jcode-provider-core/src/: anthropic.rs  lib.rs  selection.rs
crates/jcode-session-types/: Cargo.toml
crates/jcode-storage/: Cargo.toml
crates/jcode-swarm-core/: Cargo.toml
crates/jcode-terminal-launch/: Cargo.toml
crates/jcode-tool-core/: Cargo.toml
crates/jcode-tui-core/: Cargo.toml
crates/jcode-tui-markdown/: Cargo.toml
crates/jcode-tui-mermaid/: Cargo.toml
crates/jcode-tui-workspace/: Cargo.toml
crates/jcode-update-core/: Cargo.toml
docs/: AWS_BEDROCK_PROVIDER.md  BRIDGE_V1.md  CODE_QUALITY_TODO.md  COMPILE_PERFORMANCE_PLAN.md  CRATE_OWNERSHIP_BOUNDARIES.md  DESKTOP_FIRST_PROTOTYPE.md  IOS_CLIENT.md  MOBILE_AGENT_SIMULATOR.md  MOBILE_SWIFT_AUDIT.md  MODULAR_ARCHITECTURE_RFC.md  Multi-machine-orchestration-manual.md  PROVIDER_SESSION_SHARED_CONTRACT_AUDIT.md  REFACTORING.md  SWARM_ARCHITECTURE.md  plan_v1.md
docs/dev/: crate-splitting-plan.md
figma/: README.md  jcode-mobile-design-spec.md
figma/jcode-mobile-plugin/: README.md  code.js  manifest.json
ios/: SIMULATOR_FOUNDATION.md  project.yml
mockups/jcode-mobile/: add-server.html  chat.html  index.html  interrupt.html  onboarding.html  qr-scanner.html  sessions.html  settings.html  styles.css
scripts/: auth_regression_matrix.sh  bench_compile.sh  bench_startup.py  build_linux_compat.sh  check_code_size_budget.py  check_dependency_boundaries.py  check_powershell_syntax.ps1  check_warning_budget.sh  code_size_budget.json  dev_cargo.sh  install.ps1  invoke_cargo_with_timeout.ps1  jcode_harbor_agent.py  jcode_memory_snapshot.py  mobile_simulator_tester.sh  panic_budget.json  profile_single_spawn.py  quick-release.sh  refactor_phase1_verify.sh  remote_build.sh  run_terminal_bench_campaign.py  run_terminal_bench_harbor.sh  stress_test.py  stress_test_40.sh  swallowed_error_budget.json  test_reload.py  test_size_budget.json
src/: agent.rs  agent_tests.rs  ambient.rs  ambient_runner.rs  ambient_scheduler.rs  ambient_tests.rs  background.rs  browser.rs  browser_tests.rs  build.rs  bus.rs  cache_tracker.rs  catchup.rs  channel.rs  compaction.rs  compaction_tests.rs  config.rs  config_tests.rs  copilot_usage.rs  dictation.rs  gateway.rs  gateway_tests.rs  gmail.rs  id.rs  import.rs  import_tests.rs  lib.rs  logging.rs  login_qr.rs  main.rs  memory.rs  memory_agent.rs  memory_graph.rs  memory_graph_tests.rs  memory_log.rs  memory_tests.rs  memory_types.rs  message.rs  overnight.rs  platform.rs  (+36 more)
src/agent/: compaction_support.rs  env_support.rs  interrupts.rs  prompt_support.rs  provider.rs  status.rs  status_support.rs  stream_support.rs  turn_execution.rs  turn_loops.rs  turn_streaming_broadcast.rs  turn_streaming_mpsc.rs  utils.rs
src/ambient/: manager.rs  runner.rs  runner_tests.rs
src/auth/: account_store.rs  antigravity.rs  claude.rs  codex.rs  copilot.rs  copilot_auth_tests.rs  cursor.rs  cursor_tests.rs  doctor.rs  external.rs  external_tests.rs  gemini.rs  google.rs  login_flows.rs  mod.rs  oauth.rs  refresh_state.rs  status_types.rs  tests.rs  validation.rs
src/cli/: args.rs  bridge.rs  commands.rs  commands_tests.rs  debug.rs  dispatch.rs  hot_exec.rs  login.rs  mod.rs  provider_init.rs  provider_init_tests.rs  selfdev.rs  selfdev_tests.rs  startup.rs  terminal.rs  tui_launch.rs
src/gateway/: auth.rs  registry.rs
src/mcp/: client.rs  manager.rs  protocol.rs  protocol_tests.rs  tool.rs
src/memory/: activity.rs  pending.rs
src/message/: notifications.rs  tests.rs
src/prompt/: selfdev_dynamic.txt  selfdev_hint.txt  selfdev_static.txt
src/protocol_tests/: comm_responses.rs
src/provider/: accessors.rs  anthropic.rs  antigravity.rs  antigravity_tests.rs  bedrock.rs  catalog_refresh.rs  claude.rs  cli_common.rs  copilot.rs  cursor.rs  cursor_tests.rs  dispatch.rs  failover.rs  gemini.rs  gemini_tests.rs  mod.rs  models.rs  openai.rs  openai_provider_impl.rs  openai_stream_runtime.rs  openrouter.rs  openrouter_sse_stream.rs  openrouter_tests.rs  route_builders.rs  selection.rs  startup.rs  tests.rs
src/server/: await_members_state.rs  client_actions.rs  client_api.rs  client_comm.rs  client_comm_channels.rs  client_comm_context.rs  client_disconnect_cleanup.rs  client_lifecycle.rs  client_session.rs  client_session_tests.rs  client_state.rs  client_state_tests.rs  comm_await.rs  comm_control.rs  comm_control_tests.rs  comm_plan.rs  comm_session.rs  comm_session_tests.rs  comm_sync.rs  debug.rs  debug_client_commands.rs  debug_command_exec.rs  debug_help.rs  debug_server_state.rs  debug_session_admin.rs  debug_swarm_read.rs  debug_swarm_write.rs  debug_testers.rs  debug_testers_tests.rs  headless.rs  provider_control.rs  provider_control_tests.rs  queue_tests.rs  reload.rs  reload_state.rs  reload_tests.rs  runtime.rs  socket.rs  socket_tests.rs  startup_tests.rs  (+8 more)
src/session_tests/: cases.rs
src/setup_hints/: macos_launcher.rs  macos_launcher_tests.rs  macos_terminal.rs
src/telemetry/: tests.rs
src/tool/: agentgrep.rs  agentgrep_tests.rs  ambient.rs  apply_patch.rs  bash.rs  bash_tests.rs  batch.rs  batch_tests.rs  bg.rs  browser.rs  browser_tests.rs  codesearch.rs  communicate.rs  communicate_tests.rs  conversation_search.rs  debug_socket.rs  edit.rs  glob.rs  gmail.rs  goal.rs  grep.rs  invalid.rs  launch.rs  ls.rs  lsp.rs  mcp.rs  memory.rs  mod.rs  open.rs  (+16 more)
telemetry-worker/: README.md  health.sql  package.json  schema.sql  wrangler.toml
tests/: provider_matrix.rs
(+213 files in other folders)
