[package]
name = "jcode"
version = "0.7.0"
description = "Possibly the greatest coding agent ever built — blazing-fast TUI, multi-model, swarm coordination, 30+ tools"
edition = "2024"

[lib]
name = "jcode"
path = "src/lib.rs"

[[bin]]
name = "jcode"
path = "src/main.rs"

[[bin]]
name = "test_api"
path = "src/bin/test_api.rs"

[[bin]]
name = "jcode-harness"
path = "src/bin/harness.rs"

[dependencies]
# Memory allocator (reduces fragmentation for long-running server)
tikv-jemallocator = { version = "0.6", features = ["unprefixed_malloc_on_supported_platforms"], optional = true }

# Async runtime
tokio = { version = "1", features = ["full", "process"] }
futures = "0.3"
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-native-roots"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# File operations
glob = "0.3"
ignore = "0.4"           # gitignore-aware file walking
walkdir = "2"
similar = "2"            # diffing for edits

# Utilities
dirs = "5"               # home directory
anyhow = "1"
thiserror = "1"
libc = "0.2"             # Unix system calls (flock)
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
urlencoding = "2"        # URL encoding for web search
uuid = { version = "1", features = ["v4"] }
proctitle = "0.1"

# Embeddings (local inference) - behind feature flag (163 crates, slow to compile)
tract-onnx = { version = "0.21", optional = true }
tract-hir = { version = "0.21", optional = true }
tokenizers = { version = "0.21", default-features = false, features = ["onig"], optional = true }

# OAuth
base64 = "0.22"
sha2 = "0.10"
rand = "0.9"
hex = "0.4"
url = "2"
open = "5"               # Open URLs in browser
global-hotkey = "0.7"
azure_core = "0.24"
azure_identity = "0.24"

# Streaming
tokio-stream = "0.1"
bytes = "1"

# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
arboard = "3"              # Clipboard support
ratatui-image = { version = "4", default-features = false, features = ["crossterm"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }  # Only PNG/JPEG (skip avif/rav1e, exr, gif, tiff, etc)

# Markdown & syntax highlighting
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy"] }
pulldown-cmark = "0.12"
unicode-width = "0.2"   # Unicode character display width

# Email (SMTP send + IMAP receive)
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
imap = "2"
native-tls = "0.2"
mail-parser = "0.9"

# PDF parsing (behind feature flag - 56 crates)
pdf-extract = { version = "0.8", optional = true }

# Archive extraction (for auto-update)
flate2 = "1"
tar = "0.4"

# Mermaid diagram rendering (stable v0.2.0 tag)
mermaid-rs-renderer = { git = "https://github.com/1jehuang/mermaid-rs-renderer.git", tag = "v0.2.1" }
qr2term = "0.3.3"

[features]
default = ["embeddings", "pdf"]
jemalloc = ["tikv-jemallocator"]
embeddings = ["tract-onnx", "tract-hir", "tokenizers"]
pdf = ["pdf-extract"]

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Threading"] }

[profile.release]
opt-level = 1
debug = 0
codegen-units = 256
incremental = true

# Full LTO release for stable/distribution builds
[profile.release-lto]
inherits = "release"
lto = "thin"
codegen-units = 16
incremental = false

[profile.dev]
debug = 0
incremental = true

[profile.dev.package."*"]
opt-level = 0

[profile.test]
debug = 0
incremental = true
codegen-units = 256

[dev-dependencies]
async-stream = "0.3"
tempfile = "3"

[build-dependencies]
dirs = "5"
chrono = "0.4"
