[package]
name = "jcode"
version = "0.11.2"
description = "Possibly the greatest coding agent ever built — blazing-fast TUI, multi-model, swarm coordination, 30+ tools"
edition = "2024"

[workspace]
members = [
    ".",
    "crates/jcode-agent-runtime",
    "crates/jcode-embedding",
    "crates/jcode-pdf",
    "crates/jcode-azure-auth",
    "crates/jcode-notify-email",
    "crates/jcode-provider-metadata",
    "crates/jcode-provider-core",
    "crates/jcode-provider-openrouter",
    "crates/jcode-provider-gemini",
    "crates/jcode-tui-markdown",
    "crates/jcode-tui-mermaid",
    "crates/jcode-tui-workspace",
    "crates/jcode-mobile-core",
    "crates/jcode-mobile-sim",
    "crates/jcode-desktop",
]

[lib]
name = "jcode"
path = "src/lib.rs"

[[bin]]
name = "jcode"
path = "src/main.rs"

[[bin]]
name = "test_api"
path = "src/bin/test_api.rs"

[[bin]]
name = "jcode-harness"
path = "src/bin/harness.rs"

[dependencies]
# Memory allocator (reduces fragmentation for long-running server)
tikv-jemallocator = { version = "0.6", features = ["unprefixed_malloc_on_supported_platforms"], optional = true }
tikv-jemalloc-ctl = { version = "0.6", optional = true }
tikv-jemalloc-sys = { version = "0.6", optional = true }

# Async runtime
tokio = { version = "1", features = ["full", "process"] }
futures = "0.3"
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-native-roots"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# File operations
glob = "0.3"
ignore = "0.4"           # gitignore-aware file walking
walkdir = "2"
similar = "2"            # diffing for edits

# Utilities
dirs = "5"               # home directory
anyhow = "1"
thiserror = "1"
libc = "0.2"             # Unix system calls (flock)
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
urlencoding = "2"        # URL encoding for web search
uuid = { version = "1", features = ["v4", "v5"] }
proctitle = "0.1"

# Embeddings (local inference) - behind feature flag (163 crates, slow to compile)
jcode-embedding = { path = "crates/jcode-embedding", optional = true }

# OAuth
base64 = "0.22"
sha2 = "0.10"
rand = "0.9.3"
hex = "0.4"
url = "2"
open = "5"               # Open URLs in browser
jcode-azure-auth = { path = "crates/jcode-azure-auth" }
jcode-agent-runtime = { path = "crates/jcode-agent-runtime" }
jcode-notify-email = { path = "crates/jcode-notify-email" }
jcode-provider-metadata = { path = "crates/jcode-provider-metadata" }
jcode-provider-core = { path = "crates/jcode-provider-core" }
jcode-provider-openrouter = { path = "crates/jcode-provider-openrouter" }
jcode-provider-gemini = { path = "crates/jcode-provider-gemini" }
jcode-tui-markdown = { path = "crates/jcode-tui-markdown" }
jcode-tui-mermaid = { path = "crates/jcode-tui-mermaid" }
jcode-tui-workspace = { path = "crates/jcode-tui-workspace" }

# Streaming
tokio-stream = "0.1"
bytes = "1"

# TUI
ratatui = "0.30"
crossterm = { version = "0.28", features = ["event-stream"] }
arboard = "3"              # Clipboard support
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }  # Only PNG/JPEG (skip avif/rav1e, exr, gif, tiff, etc)

# Markdown & syntax highlighting
unicode-width = "0.2"   # Unicode character display width

# PDF parsing (behind feature flag)
jcode-pdf = { path = "crates/jcode-pdf", optional = true }

# Archive extraction (for auto-update)
flate2 = "1"
tar = "0.4"
tempfile = "3"
agentgrep = { git = "https://github.com/1jehuang/agentgrep.git", tag = "v0.1.2" }
qr2term = "0.3.3"

[features]
default = ["embeddings", "pdf"]
jemalloc = [
    "dep:tikv-jemallocator",
    "dep:tikv-jemalloc-ctl",
    "dep:tikv-jemalloc-sys",
    "tikv-jemallocator/stats",
    "tikv-jemalloc-ctl/stats",
]
jemalloc-prof = [
    "jemalloc",
    "tikv-jemallocator/profiling",
    "tikv-jemalloc-ctl/profiling",
]
embeddings = ["dep:jcode-embedding"]
pdf = ["dep:jcode-pdf"]

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Threading"] }

[target.'cfg(target_os = "macos")'.dependencies]
global-hotkey = "0.7"

[profile.release]
opt-level = 1
debug = 0
codegen-units = 256
incremental = true

[profile.selfdev]
inherits = "release"
opt-level = 0

# Full LTO release for stable/distribution builds
[profile.release-lto]
inherits = "release"
lto = "thin"
codegen-units = 16
incremental = false

[profile.dev]
debug = 0
incremental = true

[profile.dev.package."*"]
opt-level = 0

[profile.test]
debug = 0
incremental = true
codegen-units = 256

[dev-dependencies]
async-stream = "0.3"

[build-dependencies]
