[package]
name = "jcode-mobile-sim"
version = "0.1.0"
edition = "2024"
description = "Headless-first mobile simulator and control CLI for jcode"

[dependencies]
anyhow = "1"
bytemuck = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
jcode-mobile-core = { path = "../jcode-mobile-core" }
libc = "0.2"
pollster = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
wgpu = "0.19"
winit = "0.29"

[dev-dependencies]
tempfile = "3"
