[package]
name = "jcode-provider-core"
version = "0.1.0"
edition = "2024"

[lib]
name = "jcode_provider_core"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
